--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "recharts": "^2.10.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
