--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "date-fns": "^4.1.0",
+    "idb": "^8.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
