this is a packege.json and vite updates

--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,12 @@
     "typescript": "^5.0.2",
     "vite": "^5.0.0"
   },
+  "overrides": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0"
+  },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "eslint.config.js",
   "keywords": [],
